--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
   <!-- Games - we cannot use import because that causes CORS problems when main.html is in file:/// path-->
   <script src="./js/classes/game.js"></script>
   <script src="./js/games/thor/thor.js"></script>
-  <script src="./js/games/thorII/thorII.js"></script>
+  <!--<script src="./js/games/thorII/thorII.js"></script>-->
+  <script src="./js/games/init/init.js"></script>
 
 </head>
 
