--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
   <script src="./js/games/thor/thor.js"></script>
   <!--<script src="./js/games/thorII/thorII.js"></script>-->
   <script src="./js/games/init/init.js"></script>
+  <script src="./js/games/descent/descent.js"></script>
 
 </head>
 
@@ -41,7 +42,7 @@
         <div id="testcases"></div>
         <div class="actions">
           <div id="successNumber"></div>
-          <div class="btn playall" onclick="CODE.allTestcases()">Play all testcases</div>
+          <div class="btn playall" id="playallBtn" onclick="CODE.allTestcases()">Play all testcases</div>
           <div id="releaseBtn" class="btn release" style="display:none" onclick="CODE.releaseTests()">Release</div>
         </div>
       </div>
