Asteroids, better console output

--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
   <!--<script src="./js/games/thorII/thorII.js"></script>-->
   <script src="./js/games/init/init.js"></script>
   <script src="./js/games/descent/descent.js"></script>
+  <script src="./js/games/asteroids/asteroids.js"></script>
 
 </head>
 
