--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
   <script src="./js/games/init/init.js"></script>
   <script src="./js/games/descent/descent.js"></script>
   <script src="./js/games/asteroids/asteroids.js"></script>
+  <script src="./js/games/gameOfLife/gameOfLife.js"></script>
 
 </head>
 
