Einführungs-Spiel mit Guidance-Popup versehen

--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <meta content="utf-8" http-equiv="encoding">
 
   <title>Coding Games!</title>
+  <script src="./js/utils.js"></script>
   <script src="./js/code.js"></script>
   <script src="./js/lib/codemirror.js"></script>
   <script src="./js/lib/mode/javascript.js"></script>
@@ -18,7 +19,7 @@
   <script src="./js/games/init/init.js"></script>
   <script src="./js/games/descent/descent.js"></script>
   <script src="./js/games/asteroids/asteroids.js"></script>
-  <script src="./js/games/gameOfLife/gameOfLife.js"></script>
+  <!--<script src="./js/games/gameOfLife/gameOfLife.js"></script>-->
 
 </head>
 
