add eslint support

--- a/htmlpage/main.html
+++ b/htmlpage/main.html
@@ -19,7 +19,7 @@
   <script src="./js/games/init/init.js"></script>
   <script src="./js/games/descent/descent.js"></script>
   <script src="./js/games/asteroids/asteroids.js"></script>
-  <!--<script src="./js/games/gameOfLife/gameOfLife.js"></script>-->
+  <script src="./js/games/gameOfLife/gameOfLife.js"></script>
 
 </head>
 
