Mehrstufiger Game of Life Simulator

--- a/htmlpage/main.html
+++ b/htmlpage/main.html
@@ -20,6 +20,7 @@
   <script src="./js/games/descent/descent.js"></script>
   <script src="./js/games/asteroids/asteroids.js"></script>
   <script src="./js/games/gameOfLife/gameOfLife.js"></script>
+  <script src="./js/games/gameOfLife/gameOfLifeII.js"></script>
 
 </head>
 
