hash-driven navigation

--- a/htmlpage/main.html
+++ b/htmlpage/main.html
@@ -26,10 +26,10 @@
 
 <body>
   <div class="menu">
-    <a class="btn" onclick="show('games')">Choose Game</a>
-    <a class="btn" onclick="show('help')">Help</a>
+    <a class="btn" href="#games">Choose Game</a>
+    <a class="btn" href="#help">Help</a>
   </div>
-  <div class="view" id="gameChoice" style="display:none"><button onclick="chooseGame(0)">Start</button></div>
+  <div class="view" id="gameChoice" style="display:none"></div>
   <div class="view grid" id="gameDisplay" style="display: none;">
     <h1 id="title" style="grid-area: header"></h1>
 
