--- a/htmlpage/main.html
+++ b/htmlpage/main.html
@@ -21,6 +21,7 @@
   <script src="./js/games/asteroids/asteroids.js"></script>
   <script src="./js/games/gameOfLife/gameOfLife.js"></script>
   <script src="./js/games/gameOfLife/gameOfLifeII.js"></script>
+  <script src="./js/games/simpleui/uiFirstSteps.js"></script>
 
 </head>
 
@@ -72,7 +73,7 @@
       freien Wildbahn ebenfalls besteht, wo der Programmierer nicht weiß mit welchem Input andere Leute ihn füttern.</p>
     <p>Wenn auch die Blindtests bestanden wurden, gilt die Aufgabe als gemeistert.</p>
     <h2>Bedienung</h2>
-    <p>Spiel auswählen in <a href="javascript:void(0)" onclick="show('games')">Choose Games</a>, und los gehts.</p>
+    <p>Spiel auswählen in <a href="#games">Choose Games</a>, und los gehts.</p>
     <p>Die <b>Anleitung</b> enthält alles was es über In- und Output zu wissen gibt. Was sind die Variablen die man
       einlesen muss, was sind die Ausgaben die erwartet werden.</p>
     <p>Im Bereich <b>Sourcecode</b> wird programmiert und die Testcases gestartet. Es ist empfehlenswert die Testcases
