--- a/htmlpage/main.html
+++ b/htmlpage/main.html
@@ -28,6 +28,7 @@
   <script src="./js/games/gameOfLife/gameOfLife.js"></script>
   <script src="./js/games/gameOfLife/gameOfLifeII.js"></script>
   <script src="./js/games/simpleui/taschenrechnerJarvis.js"></script>
+  <script src="./js/games/prefixCode/prefixCode.js"></script>
 
 </head>
 
